New attributes for table User

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,7 +9,10 @@
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword) }}
         {{ form_row(registrationForm.birth) }}
-
+        {{ form_row(registrationForm.sex) }}
+        {{ form_row(registrationForm.phone) }}
+        {{ form_row(registrationForm.address) }}
+        {{ form_row(registrationForm.description) }}
         <button class="btn">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
